Fix vnet interface and epair name collisions

--- a/templates/jail-deploy.sh.template
+++ b/templates/jail-deploy.sh.template
@@ -1,4 +1,8 @@
 {{.NeedsRoot}}
 # Deploy jail {{.Name}} from image{{.Img.Release}}@{{.Img.Snapshot}}
 zfs clone {{.Img.Dataset}}@{{.Img.Snapshot}} {{.Dataset}} # Clone template data
+{{.CheckResult}}
 zfs snapshot {{.Dataset}}@{{.Img.Snapshot}} # Snapshot initial deployment state
+
+# Start the jail
+jail -cmr name={{.Name}}
