--- a/templates/img-bootstrap.sh.template
+++ b/templates/img-bootstrap.sh.template
@@ -1,4 +1,6 @@
 {{.NeedsRoot}}
+# Start bootstrap from vanilla snapshot (fails if jails depend on a snapshot newer than vanilla)
+zfs rollback -r {{.Dataset}}@vanilla
 # Bootstrap (customize) an already initialized FreeBSD {{.Release}} image for jail deployment
 mount -t devfs none {{.Path}}/dev # Mount jail devfs (needed for chroot commands to work)
 {{.CheckResult}}
@@ -12,22 +14,33 @@ chroot {{.Path}} pkg install {{range .Bootstrap.Packages}}{{.}} {{end}} # Instal
 
 {{$path := .Path}}
 {{if .Bootstrap.User}}
-# FIXME: I don't know why pw can't locate the shell on its own here (-s line)
+# NOTE: I don't know why pw can't locate the shell on its own here (-s line)
 {{range .Bootstrap.User}}
 # Create user {{.Username}}
-chroot {{$path}} pw useradd \
-	-n {{.Username}} \
+chroot {{$path}} pw useradd -n {{.Username}} \
 	{{if .Uid}}-u {{.Uid}}{{end}} \
 	{{if .LoginGroup}}-g {{.LoginGroup}}{{end}} \
 	{{if .Groups}}-G {{range .Groups}}{{.}},{{end}}{{end}} \
 	{{if .LoginClass}}-L {{.LoginClass}}{{end}} \
 	{{if .Shell}}-s `which {{.Shell}}`{{end}} \
-	{{if .CreateHome}}-m{{end}} \
-	{{if and .CreateHome .HomeDir}}-d {{.HomeDir}}{{end}} \
-	{{if and .CreateHome .HomePerms}}-M {{.HomePermString}}{{end}} \
-	-w no # Lock account
+	{{if .CreateHome}}-m \
+	-d {{.HomeDir}} \
+	-M {{.HomePermString}}{{end}} \
+	-w no # Don't set user password, this will be done later on during jail bootstrapping
+# Lock user {{.Username}}
+chroot {{$path}} pw lock {{.Username}}
+{{$homedir := .HomeDir}}
+{{$username := .Username}}
+# Install user files
+{{range .Files}}
+cp {{.}} {{$path}}/{{$homedir}}
+chroot {{$path}} chown -R {{$username}}:{{$username}} {{$homedir}}/{{.}}
+{{end}}
 {{end}}
 {{end}}
 
 # Unmount jail devfs
 umount {{.Path}}/dev
+
+# Snapshot bootstrapped image
+zfs snapshot {{.Dataset}}@{{.Snapshot}}
